--- a/_config.yml
+++ b/_config.yml
@@ -14,8 +14,8 @@ about: True # set to False or comment line if you want to remove the "How to use
 
 
 #Profile information
-name: Alan Doe
-tagline: Full Stack Developer
+name: Charlie Park
+tagline: Embedded System Software Developer
 pic: profile.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 summary: 'Summarise your career here lorem ipsum dolor sit amet, consectetuer adipiscing elit.
 You can <a href="#" target="_blank">download this free resume/CV template here</a>. Aenean
@@ -25,9 +25,9 @@ montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu
 #sidebar links
 email: hello@webjeda.com
 phone: 012 345 6789
-website: blog.webjeda.com #do not add http://
-linkedin: alandoe
-github: sharu725
+website: fusionjz.github.com #do not add http://
+linkedin: chulhee-park
+github: fusionjz
 twitter: '@webjeda'
 #Update all the sections by editing the files inside _data folder.
 
